--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,8 +26,8 @@ jobs:
     strategy:
       matrix:
         include:
-          - build_variant: "mt7621"
-            targets: "R2100"
+          - build_variant: "mt7628"
+            targets: "MI-4C"
     steps:
       - uses: actions/checkout@v2
       - name: Prepare environment
